--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://flangrys.github.io/flangrys.dev",
+  "homepage": "https://flangrys.github.io/flangrys.dev/",
   "name": "flangrys-web-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -18,9 +18,9 @@
     "graphql": "^16.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.13.0",
     "rxjs": "^7.8.2",
-    "tailwindcss": "^4.1.18",
-    "wouter": "^3.9.0"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
