--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://flangrys.github.io/flangrys.dev/",
+  "homepage": "https://flangrys.github.io/",
   "name": "flangrys-web-portfolio",
   "private": true,
   "version": "0.0.0",
